@@ -35,3 +35,25 @@ bootstrap:加载 jvm 基础核心类库：rt.jar
 extension: 加载 java.ext.dirs 系统制定的类库
 
 system: 加载 classpath/java.class.path 下面的类
+
+2.java类加载过程？
+
+加载--验证--准备--解析--解析--初始化--使用--卸载。
+
+3.GC 内存分配？
+
+对象 优先分配到 Eden 区；
+大对象直接进入 老年代：-XX:PretenureSizeThreshold=2 设置大对象的最小值；
+
+```
+-verbose:gc -Xms20M -Xmx20M -Xmn10M -XX:+PrintGCDetails -XX:SurvivorRatio=8 -XX:PretenureSizeThreshold=3145728`
+
+```
+长期存活的对象进入老年代；
+```
+-Xms20M -Xmx20M -Xmn10M -XX:+PrintGCDetails -XX:SurvivorRatio=8 -XX:MaxTenuringThreshold=1
+
+```
+动态年龄判断；
+空间分配担保
+
